# cmake-project-example

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
cmake/: AddProject.cmake  CompilerFlags.cmake
src/: CMakeLists.txt
src/calc/: CMakeLists.txt
src/calc/calc/: main.cpp
src/libarithmetic/: CMakeLists.txt
src/libarithmetic/libarithmetic/: arithmetic.cpp  arithmetic.hpp
src/libarithmetic/test/: stream_sum.cpp  test_data_path.hpp.in
